--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href=""><h2>Download Excursion (Coming Soon)</h2></a>
+    <a href="#"><h2>Download Excursion (Coming Soon)</h2></a>
+
+<video autoplay muted loop>
+    <source src="images_video/excursion.mp4" type="video/mp4">
+</video>
 </body>
 
 </html>
