--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <video autoplay muted loop>
     <source src="images_video/excursion.mp4" type="video/mp4">
 </video>
+<h2>Your personal travel guide</h2>
 </body>
 
 </html>
