--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <source src="images_video/excursion.mp4" type="video/mp4">
 </video>
 <h2>Your personal travel guide</h2>
+<p>Excursion remembers places you like, 
+    and recommends new points of interest around you</p>
+    <img src="images_video/camp.jpg" alt="camp tent">
+    <img src="images_video/phone.png" alt="phone">
 </body>
 
 </html>
