--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 </head>
 
 <body>
+    <!-- Main Section-->
     <h1>Discover hidden places in the world around you</h1>
-    <p><a class="cta" href="#">Download Excursion (Coming Soon)</a></p></a>
-
-<video autoplay muted loop>
-    <source src="images_video/excursion.mp4" type="video/mp4">
-</video>
-<h2>Your personal travel guide</h2>
-<p>Excursion remembers places you like, 
+    <p><a class="cta" href="#">Download Excursion (Coming Soon)</a></p>
+    <!-- Video Section-->
+    <video autoplay muted loop>
+        <source src="images_video/excursion.mp4" type="video/mp4">
+    </video>
+    <!-- Second Section-->
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, 
     and recommends new points of interest around you</p>
-    <img src="images_video/camp.jpg" alt="camp tent">
-    <img src="images_video/phone.png" alt="phone">
-</body>
+    <p><img src="images_video/camp.jpg" alt="camp tent"></p>
+    <p><img src="images_video/phone.png" alt="phone"></p>
+    <h3>Coming Soon for Iphone and Android</h3>
+    <p>
+        <a class="cta" href="#">Download Excursion (Coming Soon)</a>
+    </p>
 
+
+
+</body>
 </html>
