--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="CSS\Style.css">
+    <title>Discover Excursion</title>
 </head>
 
 <body>
