--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="CSS\Style.css">
     <title>Discover Excursion</title>
+    <link rel="shortcut icon" type="image/png" href="images_video/phone.png">
 </head>
 
 <body>
